--- a/Multivariable Regression.ipynb
+++ b/Multivariable Regression.ipynb
@@ -947,6 +947,157 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "f179079e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 0.1537478633309595\n",
+      "R-squared: 0.3232523899901504\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluating the model\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "predictioins = regr.predict(X)\n",
+    "\n",
+    "mse = mean_squared_error(y, predictioins)\n",
+    "print(f'Mean Squared Error: {mse}')\n",
+    "\n",
+    "r2 = r2_score(y, predictioins)\n",
+    "print(f'R-squared: {r2}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8d8a40a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression() - Mean accuracy: nan (+/- nan)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\model_selection\\_validation.py:1000: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_scorer.py\", line 139, in __call__\n",
+      "    score = scorer._score(\n",
+      "            ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_scorer.py\", line 376, in _score\n",
+      "    return self._sign * self._score_func(y_true, y_pred, **scoring_kwargs)\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\utils\\_param_validation.py\", line 213, in wrapper\n",
+      "    return func(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py\", line 231, in accuracy_score\n",
+      "    y_type, y_true, y_pred = _check_targets(y_true, y_pred)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py\", line 112, in _check_targets\n",
+      "    raise ValueError(\n",
+      "ValueError: Classification metrics can't handle a mix of binary and continuous targets\n",
+      "\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\model_selection\\_validation.py:1000: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_scorer.py\", line 139, in __call__\n",
+      "    score = scorer._score(\n",
+      "            ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_scorer.py\", line 376, in _score\n",
+      "    return self._sign * self._score_func(y_true, y_pred, **scoring_kwargs)\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\utils\\_param_validation.py\", line 213, in wrapper\n",
+      "    return func(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py\", line 231, in accuracy_score\n",
+      "    y_type, y_true, y_pred = _check_targets(y_true, y_pred)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py\", line 112, in _check_targets\n",
+      "    raise ValueError(\n",
+      "ValueError: Classification metrics can't handle a mix of binary and continuous targets\n",
+      "\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\model_selection\\_validation.py:1000: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_scorer.py\", line 139, in __call__\n",
+      "    score = scorer._score(\n",
+      "            ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_scorer.py\", line 376, in _score\n",
+      "    return self._sign * self._score_func(y_true, y_pred, **scoring_kwargs)\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\utils\\_param_validation.py\", line 213, in wrapper\n",
+      "    return func(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py\", line 231, in accuracy_score\n",
+      "    y_type, y_true, y_pred = _check_targets(y_true, y_pred)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py\", line 112, in _check_targets\n",
+      "    raise ValueError(\n",
+      "ValueError: Classification metrics can't handle a mix of binary and continuous targets\n",
+      "\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\model_selection\\_validation.py:1000: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_scorer.py\", line 139, in __call__\n",
+      "    score = scorer._score(\n",
+      "            ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_scorer.py\", line 376, in _score\n",
+      "    return self._sign * self._score_func(y_true, y_pred, **scoring_kwargs)\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\utils\\_param_validation.py\", line 213, in wrapper\n",
+      "    return func(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py\", line 231, in accuracy_score\n",
+      "    y_type, y_true, y_pred = _check_targets(y_true, y_pred)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py\", line 112, in _check_targets\n",
+      "    raise ValueError(\n",
+      "ValueError: Classification metrics can't handle a mix of binary and continuous targets\n",
+      "\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\model_selection\\_validation.py:1000: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_scorer.py\", line 139, in __call__\n",
+      "    score = scorer._score(\n",
+      "            ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_scorer.py\", line 376, in _score\n",
+      "    return self._sign * self._score_func(y_true, y_pred, **scoring_kwargs)\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\utils\\_param_validation.py\", line 213, in wrapper\n",
+      "    return func(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py\", line 231, in accuracy_score\n",
+      "    y_type, y_true, y_pred = _check_targets(y_true, y_pred)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\piatt\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py\", line 112, in _check_targets\n",
+      "    raise ValueError(\n",
+      "ValueError: Classification metrics can't handle a mix of binary and continuous targets\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from sklearn.model_selection import cross_val_score\n",
+    "# from sklearn.svm import SVC\n",
+    "# import numpy as np\n",
+    "# scores = cross_val_score(regr, X, y, cv=5, scoring='accuracy')\n",
+    "# print(f\"{regr} - Mean accuracy: {np.mean(scores):.4f} (+/- {np.std(scores) * 2:.4f})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "6df6649f",
    "metadata": {},
    "outputs": [
@@ -973,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "1e209f21",
    "metadata": {},
    "outputs": [
@@ -1390,7 +1541,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1402,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "5457864a",
    "metadata": {},
    "outputs": [],
@@ -1412,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "610c95e9",
    "metadata": {},
    "outputs": [
